spacing fix

--- a/src/layouts/main.scss
+++ b/src/layouts/main.scss
@@ -354,6 +354,10 @@ nav {
       }
     }
   }
+
+  .nav-links.container {
+    margin-bottom: $gap;
+  }
 }
 
 @media only screen and (max-width: 480px) {
